--- a/docs/config.yml
+++ b/docs/config.yml
@@ -1,6 +1,6 @@
 # config v1.0.3.0
 # Jekyll configuration
-name: Hot Beverages Inc (HBI)
+name: Hot Beverage Inc (HBI)
 description: An Addon for <a href="https://www.kerbalspaceprogram.com" target="_blank">Kerbal Space Program</a>.
 logo: /img/HeroLogo_1920x1920.jpg
 theme: jekyll-theme-architect
